--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,7 @@
     </main>
 
     <footer>
-      <p><i>Start a Fucking Blog</i> was created by <a href="https://kevquirk.com">Kev Quirk</a> and is licensed under the MIT license.<br>
-      This site was heavily influenced by <a href="http://bettermotherfuckingwebsite.com">Motherfucking Website</a></p>
+      <p>Created by Wes Osborne and licensed under the MIT license.<br></p>
     </footer>
 
   </body>
