--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,15 @@
     </main>
 
     <footer>
-      <p>Created by Wes Osborne and licensed under the MIT license.<br></p>
+<a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
+  <img alt="Creative Commons License" style="border-width:0"
+       src="https://licensebuttons.net/l/by/4.0/88x31.png" />
+</a>
+<br />
+Attribution requested as: “Wes Osborne, original author."
+This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
+  Creative Commons Attribution 4.0 International License
+</a>.
     </footer>
 
   </body>
